objects/xtma_Link_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Result</label>
        <referenceTo>xtma_Email_Result__c</referenceTo>
        <relationshipLabel>Link Details</relationshipLabel>
        <relationshipName>R00N30000001fVydEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Email Result</label>
        <referenceTo>xtma_Individual_Email_Result__c</referenceTo>
        <relationshipLabel>Link Details</relationshipLabel>
        <relationshipName>R00N30000001fVybEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Clicked__c</fullName>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
</CustomObject>